# igus-dryve-d1

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_ci_local.sh  simulator.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: __init__.py  api_models.py  api_routes.py  auth.py  command_executor.py  command_trace.py  config.py  env_loader.py  error_codes.py  events.py  exception_handlers.py  http_errors.py  metrics.py  middleware.py  protocols.py  request_context.py  routes.py  service_error_http.py  state.py  system_routes.py  types.py  version.py
app/application/: commands.py  drive_service.py  mappers.py  results.py  use_cases.py
app/domain/: health.py
app/static/: control_panel.html
drivers/: __init__.py
drivers/dryve_d1/: __init__.py
drivers/dryve_d1/api/: __init__.py  drive.py  idle_shutdown.py  motion_commands.py  od_accessor.py  status_queries.py
drivers/dryve_d1/cia402/: __init__.py  bits.py  dominance.py  fault.py  state_machine.py
drivers/dryve_d1/config/: __init__.py  defaults.py  models.py  runtime_policy.py
drivers/dryve_d1/motion/: __init__.py  homing.py  jog.py  profile_position.py  profile_velocity.py
drivers/dryve_d1/od/: __init__.py  controlword.py  indices.py  statusword.py  types.py
drivers/dryve_d1/protocol/: __init__.py  accessor.py  codec.py  exceptions.py  gateway_telegram.py  (+2 more)
drivers/examples/: basic_state_machine.py  homing_then_position.py  jog_hold_to_move.py  set_position_limits.py
drivers/tests/: conftest.py
monitoring/: legacy-api-alert-rules.yml  legacy-api-runbook.md
tests/: conftest.py  fakes.py  test_api_and_system_routes.py  test_auth.py  test_concurrent_motion.py  test_config_validation.py  test_domain_health_policy.py  test_drive_api_v1_routes.py  test_drive_service.py  test_drive_use_cases.py  test_error_codes_registry.py  test_error_contract.py  test_events.py  test_fake_drive_behavior.py  test_health_lifecycle.py  test_health_policy_extended.py  test_health_readiness_contracts.py  test_helpers.py  test_integration_boundaries.py  test_legacy_deprecation_headers.py  test_motion_endpoint_equivalence.py  test_profile_position_flow.py  test_reconnect_race.py  test_sse_concurrent.py  test_sse_events.py  test_state_lifecycle.py  test_telemetry_chain.py
(+55 files in other folders)
