[project]
name = "igus-dryve-d1-service"
version = "1.0.0"
description = "FastAPI microservice for igus Dryve D1 motor control via Modbus/TCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Aliaksandr Nazaruk"}]
keywords = ["igus", "dryve-d1", "modbus-tcp", "motor-control", "cia402", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "License :: OSI Approved :: MIT License",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
ignore = ["E402"]  # module-level imports after _LOGGER — intentional pattern

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

# Driver API uses mixin pattern: abstract stubs + cross-mixin attribute access.
# Mypy cannot resolve these without Protocol boilerplate that would hurt readability.
[[tool.mypy.overrides]]
module = "drivers.dryve_d1.api.*"
disable_error_code = ["empty-body", "attr-defined", "no-any-return", "arg-type"]

[[tool.mypy.overrides]]
module = "drivers.dryve_d1.config.models"
disable_error_code = ["name-defined"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["simulator: requires Modbus simulator or hardware"]
